fix: no scrollbar and create a post page ui responsiveness

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,11 @@
 
 body{
     height: 100vh;
+    scrollbar-width: 0;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .ql-editor{
@@ -89,14 +94,3 @@ select {
     }
   }
 
-@layer utilities {
-    
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
-  
-    .no-scrollbar {
-        -ms-overflow-style: none;  
-        scrollbar-width: none;  
-  }
-}
